--- a/udagram-api-user/package.json
+++ b/udagram-api-user/package.json
@@ -16,37 +16,37 @@
   "author": "Gabriel Ruttner",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/jsonwebtoken": "^8.3.2",
-    "aws-sdk": "^2.429.0",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.18.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
+    "aws-sdk": "^2.1472.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
-    "express": "^4.16.4",
-    "formidable": "^2.1.2",
+    "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.0.3",
+    "pg": "^8.11.3",
     "querystring": "^0.2.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.33.0",
-    "sequelize-typescript": "^0.6.11"
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.26",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.16.1",
-    "@types/node": "^11.15.54",
-    "@types/sequelize": "^4.27.44",
-    "@types/validator": "^10.11.3",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "eslint": "^6.8.0",
+    "@types/bluebird": "^3.5.39",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.3",
+    "@types/sequelize": "^4.28.16",
+    "@types/validator": "^13.11.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "eslint": "^8.51.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^10.2.0",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.3.4000"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
