--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,35 @@
 language: node_js
 node_js:
-  - 16
+- 16
 
 services:
-  - docker
+- docker
 
 ## Pre-testing installs
 install:
-  - echo "nothing needs to be installed"
+- echo "nothing needs to be installed"
 
 ## Scripts to be run such as tests
 before_script:
-  - echo "no tests. Yes there will be tests"
+- echo "no tests. Yes there will be tests"
 
 ## Build
 script:
-  - docker --version
-  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
-  - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker build -t udagram-api-user ./udagram-api-user
-  - docker build -t udagram-frontend ./udagram-frontend
+- docker --version
+- docker build -t udagram-reverseproxy ./udagram-reverseproxy
+- docker build -t udagram-api-feed ./udagram-api-feed
+- docker build -t udagram-api-user ./udagram-api-user
+- docker build -t udagram-frontend ./udagram-frontend
+- docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:v1
 ## Tagging
-  - docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:v1
-  - docker tag udagram-api-feed shincnielts/udagram-api-feed:v1
-  - docker tag udagram-api-user shincnielts/udagram-api-user:v1
-  - docker tag udagram-frontend shincnielts/udagram-frontend:local
+- docker tag udagram-api-feed shincnielts/udagram-api-feed:v1
+- docker tag udagram-api-user shincnielts/udagram-api-user:v1
+- docker tag udagram-frontend shincnielts/udagram-frontend:v1
 
 ## Format DOCKER information
 after-success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push shincnielts/udagram-reverseproxy:v1
-  - docker push shincnielts/udagram-api-feed:v1
-  - docker push shincnielts/udagram-api-user:v1
-  - docker push shincnielts/udagram-frontend:local
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- docker push shincnielts/udagram-reverseproxy:v1
+- docker push shincnielts/udagram-api-feed:v1
+- docker push shincnielts/udagram-api-user:v1
+- docker push shincnielts/udagram-frontend:v1
