--- a/.travis.yml
+++ b/.travis.yml
@@ -20,16 +20,17 @@ script:
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-api-user ./udagram-api-user
 - docker build -t udagram-frontend ./udagram-frontend
-- docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:v1
+
 ## Tagging
-- docker tag udagram-api-feed shincnielts/udagram-api-feed:v1
-- docker tag udagram-api-user shincnielts/udagram-api-user:v1
-- docker tag udagram-frontend shincnielts/udagram-frontend:v1
+- docker tag udagram-api-feed shincnielts/udagram-api-feed:latest
+- docker tag udagram-api-user shincnielts/udagram-api-user:latest
+- docker tag udagram-frontend shincnielts/udagram-frontend:latest
+- docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:latest
 
 ## Format DOCKER information
 after-success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push shincnielts/udagram-reverseproxy:v1
-- docker push shincnielts/udagram-api-feed:v1
-- docker push shincnielts/udagram-api-user:v1
-- docker push shincnielts/udagram-frontend:v1
+- docker push shincnielts/udagram-reverseproxy
+- docker push shincnielts/udagram-api-feed
+- docker push shincnielts/udagram-api-user
+- docker push shincnielts/udagram-frontend
