--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 ## Tagging
 - docker tag udagram-api-feed shincnielts/udagram-api-feed:latest
 - docker tag udagram-api-user shincnielts/udagram-api-user:latest
-- docker tag udagram-frontend shincnielts/udagram-frontend:latest
+- docker tag udagram-frontend shincnielts/udagram-frontend:v8
 - docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:latest
 
 ## Format DOCKER information
@@ -33,4 +33,4 @@ after-success:
 - docker push shincnielts/udagram-reverseproxy
 - docker push shincnielts/udagram-api-feed
 - docker push shincnielts/udagram-api-user
-- docker push shincnielts/udagram-frontend
+- docker push shincnielts/udagram-frontend:v8
