--- a/configurations/env-configmap.yaml
+++ b/configurations/env-configmap.yaml
@@ -7,7 +7,7 @@ data:
   JWT_SECRET: testing
   POSTGRES_DB: postgres
   POSTGRES_HOST: hani.caxxiyrgrv1z.us-east-1.rds.amazonaws.com
-  URL: http://localhost:8100
+  URL: http://http://adee8a9f55eed4621a74578a16b4a95a-1231364621.us-east-1.elb.amazonaws.com:8100
 metadata:
   name: env-config
 
