--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -27,6 +27,7 @@
     "@ionic/cli": "^6.16.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
+    "tslib": "^2.4.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
