--- a/configurations/backend-user-deployment.yaml
+++ b/configurations/backend-user-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: api-user
     spec:
       containers:
-      - image: shincnielts/udagram-api-user:latest
+      - image: shincnielts/udagram-api-user:v1
         name: api-user
         imagePullPolicy: Always
         resources:
