--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ script:
 
 ## Tagging
 - docker tag udagram-api-feed shincnielts/udagram-api-feed:latest
-- docker tag udagram-api-user shincnielts/udagram-api-user:v1
-- docker tag udagram-frontend shincnielts/udagram-frontend:v3
+- docker tag udagram-api-user shincnielts/udagram-api-user:latest
+- docker tag udagram-frontend shincnielts/udagram-frontend:v4
 - docker tag udagram-reverseproxy shincnielts/udagram-reverseproxy:latest
 
 ## Format DOCKER information
@@ -32,5 +32,5 @@ after-success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push shincnielts/udagram-reverseproxy:latest
 - docker push shincnielts/udagram-api-feed:latest
-- docker push shincnielts/udagram-api-user:v1
-- docker push shincnielts/udagram-frontend:v3
+- docker push shincnielts/udagram-api-user:latest
+- docker push shincnielts/udagram-frontend:v4
